--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,11 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(Boost COMPONENTS system filesystem REQUIRED)
 
 include_directories ("${PROJECT_BINARY_DIR}")
-include_directories ("${PROJECT_SOURCE_DIR}/Trainer")
-add_subdirectory (Trainer)
-set (EXTRA_LIBS ${EXTRA_LIBS} Trainer)
+include_directories ("${PROJECT_SOURCE_DIR}/utils")
+include_directories ("${PROJECT_SOURCE_DIR}/trainer")
+add_subdirectory (utils)
+add_subdirectory (trainer)
+set (EXTRA_LIBS ${EXTRA_LIBS} utils trainer)
 
 add_executable (trainer_demo trainer_demo.cpp ${EXTRA_LIBS})
 target_link_libraries (trainer_demo  ${EXTRA_LIBS})
