--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,19 @@ find_package(Boost COMPONENTS system filesystem REQUIRED)
 include_directories ("${PROJECT_BINARY_DIR}")
 include_directories ("${PROJECT_SOURCE_DIR}/utils")
 include_directories ("${PROJECT_SOURCE_DIR}/trainer")
+include_directories ("${PROJECT_SOURCE_DIR}/classifier")
 add_subdirectory (utils)
 add_subdirectory (trainer)
-set (EXTRA_LIBS ${EXTRA_LIBS} utils trainer)
+add_subdirectory (classifier)
+set (EXTRA_LIBS ${EXTRA_LIBS} utils trainer classifier)
 
 add_executable (trainer_demo trainer_demo.cpp ${EXTRA_LIBS})
 target_link_libraries (trainer_demo  ${EXTRA_LIBS})
 target_link_libraries(trainer_demo ${OpenCV_LIBS})
 target_link_libraries(trainer_demo ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+
+add_executable (classifier_demo classifier_demo.cpp ${EXTRA_LIBS})
+target_link_libraries (classifier_demo  ${EXTRA_LIBS})
+target_link_libraries(classifier_demo ${OpenCV_LIBS})
+target_link_libraries(classifier_demo ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
 
